templates/database-with-persistent-storage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg-db
  namespace: ඞඞඞ
spec:
  selector:
    matchLabels:
      app: ඞඞඞ
  replicas: 1
  template:
    metadata:
      labels:
        app: ඞඞඞ
    spec:
      volumes: # Add this section
      - name: postgresdb
        persistentVolumeClaim:
          claimName: azure-storage
      containers:
      - name: database
        image: workshopacrsqr2klsnuxgxa.azurecr.io/ඞඞඞ/name:0.1.0
        imagePullPolicy: Always
        volumeMounts: # Add this section
        - name: postgresdb
          mountPath: /var/lib/postgresql/data
