templates/service-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: ඞඞඞ
  namespace: ඞඞඞ
  labels:
    app: ඞඞඞ
spec:
  ports:
  - port: 7777
    targetPort: 7777
  selector:
    app: ඞඞඞ
