templates/network-policy-template.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-policy
  namespace: ඞඞඞ
spec:
  podSelector:
    matchLabels:
      app: ඞඞඞ # Label of the service the policy is applied to
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0 # Allow traffic from the ingress
    - from:
      - podSelector:
          matchLabels:
            app: ඞඞඞ # Label of the service the rule is applied to
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
      - podSelector:
          matchLabels:
            app: ඞඞඞ # Label of the service the rule is applied to
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: database-policy
  namespace: ඞඞඞ
spec:
  podSelector:
    matchLabels:
      app: ඞඞඞ # Label of the service the policy is applied to
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: ඞඞඞ # Label of the service the rule is applied to
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: ඞඞඞ # Label of the service the rule is applied to
